[metadata]
name = cryosparc-utils2
version = 0.0.0

[options]
name = cryosparc_utils2

install_requires =
    cryosparc-tools ~=4.2.0
    numpy
    pandas
    matplotlib

[options.extras_require]
dev =
    black
    flake8
    jupyter

[options.entry_points]
console_scripts =
    cu2_compare_fsc = cryosparc_utils2.scripts.cu2_compare_fsc:main
